--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@
 /* Colors */
 :root {
   --color-default: #fafafa;
-  --color-primary: #27a776;
-  --color-secondary: #161718;
+  --color-primary: #f8b424;
+  --color-secondary: #0D7576;
 }
 
 /* Smooth scroll behavior */
