--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1226,11 +1226,11 @@ h6 {
   text-transform: uppercase;
   transition: 0.3s;
   color: #fff;
-  background: var(--color-primary);
+  background: var(--color-secondary);
 }
 
 .hero .btn-get-started:hover {
-  background: #2cbc85;
+  background: var(--color-primary);
 }
 
 @media (max-width: 768px) {
@@ -1262,5 +1262,21 @@ h6 {
 }
 
 .footer .credits a {
+  color: var(--color-primary);
+}
+
+/*--------------------------------------------------------------
+# Custom social 
+--------------------------------------------------------------*/
+.logo-panel a{
+  color: rgba(255, 255, 255, 0.8);
+  padding-left: 15px;
+  display: inline-block;
+  line-height: 0px;
+  transition: 0.3s;
+  font-size: 2rem;
+}
+
+.logo-panel a:hover {
   color: var(--color-primary);
 }
