--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1268,13 +1268,13 @@ h6 {
 /*--------------------------------------------------------------
 # Custom social 
 --------------------------------------------------------------*/
-.logo-panel a{
+.logo-panel a {
   color: rgba(255, 255, 255, 0.8);
   padding-left: 15px;
   display: inline-block;
   line-height: 0px;
   transition: 0.3s;
-  font-size: 2rem;
+  font-size: 32px;
 }
 
 .logo-panel a:hover {
